# time-tracker

./: .editorconfig  .gitignore  README.md  build.py  main.py  pyproject.toml
.agent/rules/: global.md  python.md
.github/instructions/: agent.instructions.md
app/: __init__.py  utils.py
app/domain/: __init__.py  models.py
app/i18n/: __init__.py  translations.py
app/infra/: __init__.py  config.py  db.py  models.py  repository.py
app/infra/os_hooks/: __init__.py  base.py  factory.py  linux_monitor.py  macos_monitor.py  windows_monitor.py
app/resources/templates/: detailed_csv_report.txt
app/services/: __init__.py  accounting_matrix_service.py  backup_service.py  calendar_service.py  excel_report_service.py  matrix_report_service.py  report_service.py  timer_service.py
app/ui/: __init__.py  accounting_dialogs.py  dialogs.py  history_window.py  main_window.py  report_window.py  settings_dialog.py  splash_screen.py  task_dialogs.py  tray_icon.py
config/: matrix_report_example.yaml  settings.yaml
docs/: deployment.md
docs/architecture/: concept.md  internationalization.md  overview.md
docs/tutorial/: script.md
scripts/: cleanup.py  generate_icons.py  generate_report.py  inject_test_data.py  seed_data.py  verify_accounting.py  verify_regulations.py
tests/: conftest.py  test_german_holidays.py  test_matrix_report.py
