[project]
name = "time-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "dbus-python>=1.4.0 ; sys_platform == 'linux'",
    "greenlet>=3.0.0",
    "holidays>=0.89",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyobjc-framework-cocoa>=12.1 ; sys_platform == 'darwin'",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.10.1",
    "pywin32>=311 ; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
